# robot_pid_library

./: CMakeLists.txt
config/: pid.json
git-dependencies/agent_tracking/: CMakeLists.txt
git-dependencies/agent_tracking/include/: agent_tracking.h
git-dependencies/agent_tracking/src/: tracking_client.cpp  tracking_service.cpp
include/robot_lib/: gamepad_wrapper.h  robot_agent.h  robot_simulator.h
python/: robot_sim_viewer.py  robot_test.py  show_robot.py
src/: gamepad_wrapper.cpp  robot.cpp  robot_agent.cpp  robot_simulator.cpp  tracking_simulator.cpp
src/tool/: controller.cpp  controller_simulator_main.cpp  experiment_simulator_main.cpp  fake_robot.cpp  gamepad.cpp  robot_simulator_main.cpp  stop_fake_robot.cpp
